CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( "orthonormal-tangent-basis" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake $ENV{CMAKE_MODULE_PATH} )

SET( FLAGS -march=native )
SET( TYPE RelWithDebInfo )

SET( DEFINITIONS )

SET( SRC src )
SET( INC include )
SET( THR thirdparty )

SET( PROJ_SOURCES
  ${SRC}/main.cpp
  )

SET( PROJ_HEADERS
  )

SET( THIRD_PARTY
  )

SET( CMAKE_CXX_FLAGS ${FLAGS} )
SET( CMAKE_BUILD_TYPE ${TYPE} )

ADD_DEFINITIONS( ${DEFINITIONS} )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )

INCLUDE_DIRECTORIES(
  ${INC}
  ${THR}
  )

TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}
  )